--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://thelearnermanish:<password>@cluster0.5g5bjpm.mongodb.net
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=secretAccess
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=secretRefresh
+REFRESH_TOKEN_EXPIRY=10d
